- [bugfix] Fix for WFBinding::OPTION_DO_NOT_PUSH_VALUE_SEMAPHORE which was accidentally causing a logic error even on widgets that did not use the feature. This caused bindings not to be pushed if the value was NULL. This broke many radio buttons, checkboxes, and dropdowns.
- [new] Add optional error code injection into WFKeyValueValidators::validateUrl()

Version 0.3.8 - 9/15/2010
- [new] add WFWebApplicationDelegate::rerouteInvocationPath() function to allow routing customizations.
- [bugfix] WFYAHOO_widget_TabView no longer tries to select tabs from $_REQUEST[$tabViewId] if the tab does not exist. This caused no tab to be selected in some cases.
- [improved] Remove in-efficient (and duplicate) check in bind() that tried to figure out if the specified local property is bindable.
- [new] Add WFBinding::OPTION_DO_NOT_PUSH_VALUE_SEMAPHORE and WFSensitiveDataFormatter::$notModifiedSemaphore to allow use of WFSensitiveDataFormatter in an editable WFTextField.
- [bugfix] Properly encode current facetSelections() in Ajax requests. Previously was just "fixing" / chars. Now using encodeUriComponent.
- [bugfix] Fixed a bug (thanks SwissalpS) in WFYAHOO_widget_TabView that caused tabs to work funny if some of the tabs had no config.
- [bugfix] Fixed a bug that caused the default selected tab (from markup class="selected") to not load dynamic dataSrc content. I think this is a "fix" for a YUI bug.
- [new] Add "class" support to WFTextArea.
- [improved] Improve WFAction/WFRPC callback infrastructure. Add new rpc.callback.invalid and WFAction ajaxInvalid callback to allow clients to detect that a phocoa validation error occurred.

Version 0.3.7 - 6/10/2010
- [bugfix] Add htmlspecialchars() to WFYAHOO_widget_AutoComplete.
- [new] Added a hash() function to WFArray to make it easy to create hashes of object models. Great for use with JSON.